--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/xubaoshi/koa-react-cnode/issues"
   },
-  "homepage": "https://github.com/xubaoshi/koa-react-cnode#readme"
+  "homepage": "https://github.com/xubaoshi/koa-react-cnode#readme",
+  "dependencies": {
+    "koa": "^1.2.1",
+    "lodash": "^4.14.0"
+  },
+  "devDependencies": {
+    "open": "0.0.5"
+  }
 }
