--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
   },
   "homepage": "https://github.com/xubaoshi/koa-react-cnode#readme",
   "dependencies": {
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.11.6",
     "co-fs": "^1.2.0",
     "escape-html": "^1.0.3",
+    "jsx-loader": "^0.13.2",
     "koa": "^1.2.1",
     "koa-react-view": "^3.0.0",
     "koa-static-cache": "^3.1.7",
     "lodash": "^4.14.0",
     "react": "^15.3.0",
-    "react-engine": "^4.0.0"
+    "react-engine": "^4.0.0",
+    "unescape-html": "^1.0.0",
+    "webpack": "^1.13.1"
   },
   "devDependencies": {
     "open": "0.0.5"
