add koa react code

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "escape-html": "^1.0.3",
     "jsx-loader": "^0.13.2",
     "koa": "^1.2.1",
+    "koa-proxy": "^0.6.0",
     "koa-react-view": "^3.0.0",
+    "koa-router": "^5.4.0",
     "koa-static-cache": "^3.1.7",
     "lodash": "^4.14.0",
     "react": "^15.3.0",
