--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa": "^1.2.1",
     "koa-proxy": "^0.6.0",
     "koa-react-view": "^3.0.0",
+    "koa-request": "^1.0.0",
     "koa-router": "^5.4.0",
     "koa-static-cache": "^3.1.7",
     "lodash": "^4.14.0",
